# MarkLite

./: .env.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  README.en.md  README.md  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
.agents/skills/marklite-build/: SKILL.md
.claude/skills/marklite-build/: SKILL.md
patches/: @codemirror__view@6.43.1.patch
public/: test-badges.md
scripts/: measure-toolbar.mjs  translate.mjs
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  md-file.icns
src-tauri/src/: lib.rs  main.rs
src/components/editor/: CodeEditor.tsx  EditorPane.tsx  TabBar.tsx
src/components/file/: FileTabs.tsx  FileTree.tsx  MdFileIcon.tsx  Outline.tsx  RecentFiles.tsx  SearchPanel.tsx
src/components/layout/: EditorToolbar.tsx  ResizeHandle.tsx  Sidebar.tsx  SplitView.tsx  StatusBar.tsx  TitleBar.tsx  TopBar.tsx
src/components/preview/: MarkdownPreview.tsx  PreviewTabBar.tsx
src/components/settings/: SchemePicker.tsx  SettingsDialog.tsx  sections.ts
src/components/ui/: ConfirmDialog.tsx  Menu.tsx  NumberField.tsx  ScrollToTop.tsx  Select.tsx  SettingRow.tsx  ShortcutsHelp.tsx  Toast.tsx  Toggle.tsx  Tooltip.tsx
src/lib/: window.ts
src/lib/markdown/: parser.ts  shiki.ts
src/stores/: confirmStore.ts  editorStore.ts  fileStore.ts  notificationStore.ts  recentStore.ts  refreshStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
(+33 files in other folders)
