[package]
name = "marklite"
version = "0.2.10"
description = "MarkLite - 轻量级 Markdown 编辑器"
authors = ["zwf"]
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "marklite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
# 单例插件：仅桌面端。已运行时拖文件到图标/双击关联文件，把 argv 转给现有实例而非开新窗口
tauri-plugin-single-instance = "2"

# ===== Release 优化 =====
# 目标：包体积 < 10MB，启动 < 300ms
[profile.release]
panic = "abort"          # 减小二进制体积
codegen-units = 1        # 更好的代码优化
lto = true               # 链接时优化，跨 crate 内联
opt-level = "s"          # 优化体积（"z" 更激进但更慢）
strip = true             # 剥离符号
incremental = false      # release 关闭增量编译
